@@ -49,6 +49,7 @@ extern const QStringList TEXT_EXTENSIONS;
 extern const QStringList FONT_EXTENSIONS;
 extern const QStringList IMAGE_EXTENSIONS;
 extern const QString ENCODING_ATTRIBUTE;
+extern const QString STANDALONE_ATTRIBUTE;
 extern const QString ADOBE_FONT_ALGO_ID;
 extern const QString IDPF_FONT_ALGO_ID; 
 //extern const int STATUSBAR_MSG_DISPLAY_TIME;
